@@ -1,5 +1,12 @@
 2008-11-20  Sam Weinig  <sam@webkit.org>
 
+        Fix non-mac builds.
+
+        * parser/Lexer.cpp:
+        * parser/Parser.cpp:
+
+2008-11-20  Sam Weinig  <sam@webkit.org>
+
         Reviewed by Darin Adler.
 
         Patch for https://bugs.webkit.org/show_bug.cgi?id=22385
